syntax="proto3";
option java_package ="se.umu.cs.ads.fildil.messages";
option java_multiple_files = true;
option java_outer_classname = "Protocol";

message Chunk {
    int32 id = 1;
    bytes buf = 2;
//    required bytes checksum = 3;
//    required bytes sign = 4;
}

message ChunkRequest {
    string id = 1;
}

message SendChunkReply {

}

service Streamer {
    rpc requestChunk(ChunkRequest) returns (Chunk);
    rpc sendChunk(Chunk) returns (SendChunkReply);
}